[gd_scene load_steps=5 format=3 uid="uid://dn8lar488daha"]

[ext_resource type="Script" path="res://src/hud.gd" id="1_tqs13"]
[ext_resource type="FontFile" uid="uid://doj1exsma4jew" path="res://font/KiriFont.ttf" id="2_qcajq"]
[ext_resource type="Texture2D" uid="uid://cbbgcaq7tlh0u" path="res://assets/Untitled_Artwork (8).png" id="2_w1eje"]
[ext_resource type="Texture2D" uid="uid://dhih6w0a3nbfb" path="res://assets/bigkey.png" id="3_57flt"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqs13")

[node name="timerBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -154.0
offset_top = -87.0
offset_right = 2206.0
offset_bottom = 1553.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_w1eje")

[node name="timerLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 84.0
offset_right = 348.0
offset_bottom = 243.0
theme_override_fonts/normal_font = ExtResource("2_qcajq")
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = " [center]00:00[center]"

[node name="gameTimer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="schizoLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 156.0
offset_right = 1952.0
offset_bottom = 304.0
theme_override_fonts/normal_font = ExtResource("2_qcajq")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true

[node name="leftKey" type="Sprite2D" parent="."]
position = Vector2(1515, 1057)
rotation = 1.5708
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_57flt")

[node name="downKey" type="Sprite2D" parent="."]
position = Vector2(1651, 1057)
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_57flt")

[node name="upKey" type="Sprite2D" parent="."]
position = Vector2(1651, 921)
rotation = 3.14159
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_57flt")

[node name="rightKey" type="Sprite2D" parent="."]
position = Vector2(1787, 1057)
rotation = -1.5708
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_57flt")

[connection signal="timeout" from="gameTimer" to="." method="_on_game_timer_timeout"]
